--- a/public/show.html
+++ b/public/show.html
@@ -23,10 +23,12 @@
 <a href="home.html" >Home</a>
 <a href="new.html" >New Page</a>
 <h1>All Movies</h1>
-
 <section class="showMovie">
+</section>
+<section class="poster" >
 
 </section>
-<script type="text/javascript" src="edit.js"></script>
+
+<script type="text/javascript" src="show.js"></script>
   </body>
 </html>
